fix: buttons height and vertical align inconcistency in Safari

--- a/core/assets/css/ds__defaults.css
+++ b/core/assets/css/ds__defaults.css
@@ -798,17 +798,18 @@ main a.btn,
 main button[type="button"].btn {
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     gap: var(--ita-spacings-3);
+    padding: 1.5em;
     border-radius: 100px;
     background-color: var(--ita-colors-neutral-200);
     color: var(--ita-colors-neutral-900);
     border: 1px dashed var(--ita-colors-neutral-900);
-    padding: var(--ita-spacings-3) var(--ita-spacings-5);
+    height: 3em;
     text-transform: uppercase;
     text-decoration: none;
     font-variation-settings: "slnt" 0, "CASL" 0, "CRSV" 0, "MONO" 0, "wght" 600;
     font-size: var(--ita-fontSizes-3);
-    line-height: 1em;
     cursor: pointer;
     transition: all 300ms;
     white-space: nowrap;
